# thrift-examples

./: .gitignore  Makefile  README.md  Thrift.md  http2.md  thrift-data-transmission.md  thrift.example.thrift
go_llm_client/: go.mod  main.go
go_llm_client/llm/: GoUnusedProtection__.go  llm-consts.go  llm.go
go_llm_client/llm/language_model_service-remote/: language_model_service-remote.go
go_llm_client/weather/: weather-consts.go
go_stream_server/: go.mod  server.go  server_test.go
go_stream_server/utils/: utils.go
go_stream_server/weather/: GoUnusedProtection__.go  weather.go
go_stream_server/weather/weather_monitor_service-remote/: weather_monitor_service-remote.go
nodejs_llm_client/: package-lock.json  package.json  tsconfig.json
nodejs_llm_client/public/: index.html
nodejs_llm_client/src/: server.ts
nodejs_stream_client/: package-lock.json  package.json  tsconfig.json
nodejs_stream_client/public/: index.html
nodejs_stream_client/src/: server.ts
python_llm_server/: pyproject.toml  server.py  test_server.py  utils.py
thrift/: llm.thrift  weather.thrift
