[project]
name = "python-server"
version = "0.1.0"
description = "Thrift Python Server"
requires-python = ">=3.8"
dependencies = [
    "thrift==0.16.0",
    "numpy==1.24.3",
    "torch==2.2.1",
    "transformers==4.37.2",
    "accelerate==0.27.2",
    "scipy",
    "requests==2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_server"]

[tool.uv]
dev-dependencies = []